--- a/views/wishlist.html
+++ b/views/wishlist.html
@@ -46,7 +46,6 @@
         height: fit-content;
         justify-content: space-between;
         justify-content: center;
-
     }
 
     .grid {
@@ -113,9 +112,11 @@
 
     .item {
         color: rgb(179, 179, 179);
+        backdrop-filter: blur(6px);
         display: grid;
         box-shadow: 0px 0px 3px rgb(42, 41, 43);
-        background-color: rgba(42, 41, 43, 0.8);
+        background-color: rgba(42, 41, 43, 0.4);
+        border: #1b1b1b solid 1px;
         border-radius: 4px;
         justify-content: center;
         font-family: 'Verdana', Courier, monospace;
