--- a/views/pagina-produto.html
+++ b/views/pagina-produto.html
@@ -37,16 +37,16 @@
     </div>
     <div class="cabecalho">
       <nav>
-        <ul>
-          <li><a href="/">HOME</a></li>
-          <li><a href="#">CAIXAS</a></li>
-          <li><a href="/user">AUTORES</a></li>
-          <li><a href="#">EDITORA</a></li>
-          <li><a href="/wishlist">WISHLIST</a></li>
-          <li><a href="/carrinho">CARRINHO</a></li>
-        </ul>
+          <ul>
+              <li><a class="home" href="/">HOME</a></li>
+              <li><a class="caixas" href="#">CAIXAS</a></li>
+              <li><a class="autores" href="/user">AUTORES</a></li>
+              <li><a class="editora" href="#">EDITOR</a></li>
+              <li><a class="wishlist" href="/wishlist">WISHLIST</a></li>
+              <li><a class="carrinho" href="/carrinho">CARRINHO</a></li>
+          </ul>
       </nav>
-    </div>
+  </div>
   </header>
 
   <body>
@@ -55,7 +55,7 @@
 
     <div class="cart">
       <div class="row row1">
-        <div class="col-md-4">
+        <div class="col-mde-4">
           <div class="imagem-principal">
             <img src="https://m.media-amazon.com/images/I/81KqSk09YCL.jpg" id="ProductImg">
           </div>
@@ -89,8 +89,7 @@
                   </div>
                   <div class="col-md-4-sze">
                     <h5>Size</h5>
-                    <select class="size-custom-select">
-                      <option>Select Size</option>
+                    <select class="size custom-select">
                       <option>39</option>
                       <option>40</option>
                       <option>41</option>
@@ -112,11 +111,11 @@
 
             <div class="buttons">
               <div class="row">
-                <div class="col-md-6"><a href="#" class="custom-btn">Add To Cart<i class="fas fa-angle-right"></i></a>
+                <div class="col-md-6"><a href="#" class="custom-btn">Adicionar ao carrinho<i class="fas fa-angle-right"></i></a>
                 </div>
                 <div class="col-md-6"><a href="#" class="custom-btn">Wishlist<i class="fas fa-angle-right"></i></a>
                 </div>
-                <div class="col-md-6"><a href="#" class="custom-btn">Add To box<i class="fas fa-angle-right"></i></a>
+                <div class="col-md-6"><a href="#" class="custom-btn">Adicionar a caixa<i class="fas fa-angle-right"></i></a>
                 </div>
               </div>
             </div>
@@ -124,8 +123,8 @@
 
           <div id="product" class="product-inf">
             <ul>
-              <li class="active"><a href="#Description">Product Description</a></li>
-              <li><a href="#Details">Product Details</a></li>
+              <li class="active"><a class="product-inf" href="#Description">Descrição do produto</a></li>
+              <li><a class="product-inf" href="#Details">Detalhes do produto</a></li>
             </ul>
             <div class="tabs-content">
               <div id="Description">
