--- a/public/stylesheets/cabecalho.css
+++ b/public/stylesheets/cabecalho.css
@@ -5,7 +5,8 @@
 }
 
 header {
-  background-color: rgba(42, 41, 43, 0.8);
+  background-color: rgba(42, 41, 43, 0.4);
+  backdrop-filter: blur(6px);
   box-shadow: 0px 0px 10px rgb(42, 41, 43);
   height: 70px;
   top: 0;
