--- a/views/book.html
+++ b/views/book.html
@@ -71,12 +71,12 @@
         <div class="cabecalho">
             <nav>
                 <ul>
-                    <li><a href="#">LIVROS</a></li>
-                    <li><a href="#">CAIXAS</a></li>
-                    <li><a href="#">CARRINHO</a></li>
-                    <li><a href="#">EDITORA</a></li>
-                    <li><a href="#">WISHLIST</a></li>
-                    <li><a href="#">AUTORES</a></li>
+                    <li><a class="home" href="/">HOME</a></li>
+                    <li><a class="caixas" href="#">CAIXAS</a></li>
+                    <li><a class="autores" href="/user">AUTORES</a></li>
+                    <li><a class="editora" href="#">EDITOR</a></li>
+                    <li><a class="wishlist" href="/wishlist">WISHLIST</a></li>
+                    <li><a class="carrinho" href="/carrinho">CARRINHO</a></li>
                 </ul>
             </nav>
         </div>
