--- a/views/wishlist.html
+++ b/views/wishlist.html
@@ -26,16 +26,6 @@
         justify-content: center;
     }
 
-    header {
-        margin-bottom: 100px;
-        width: 100%;
-        grid-template-columns: 100px 400px 100px;
-        grid-template-rows: 20px 25px 20px;
-        background-color: rgba(42, 41, 43, 0.9);
-        box-shadow: 0px 0px 10px rgb(42, 41, 43);
-
-    }
-
     .principal {
         position: relative;
         bottom: 60px;
@@ -96,6 +86,11 @@
     .ul {
         color: white;
         padding: 20px;
+    }
+
+    .wishlist {
+        color: rgb(19, 19, 19);
+        background-color: #f85d03;
     }
 
     .imgbox {
@@ -332,12 +327,12 @@
         <div class="cabecalho">
             <nav>
                 <ul>
-                    <li><a href="/">HOME</a></li>
-                    <li><a href="#">CAIXAS</a></li>
-                    <li><a href="/user">AUTORES</a></li>
-                    <li><a href="#">EDITORA</a></li>
-                    <li><a href="/wishlist">WISHLIST</a></li>
-                    <li><a href="/carrinho">CARRINHO</a></li>
+                    <li><a class="home" href="/">HOME</a></li>
+                    <li><a class="caixas" href="#">CAIXAS</a></li>
+                    <li><a class="autores" href="/user">AUTORES</a></li>
+                    <li><a class="editora" href="#">EDITOR</a></li>
+                    <li><a class="wishlist" href="/wishlist">WISHLIST</a></li>
+                    <li><a class="carrinho" href="/carrinho">CARRINHO</a></li>
                 </ul>
             </nav>
         </div>
