--- a/views/layouts/autores.ejs
+++ b/views/layouts/autores.ejs
@@ -1,57 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="../public/stylesheets/autores.css">
-    <link rel="stylesheet" type="text/css" href="../public/stylesheets/cabecalho.css">
-    <link rel="stylesheet" type="text/css" href="../public/stylesheets/scrollbar.css">
-    <link rel="stylesheet" type="text/css" href="../public/stylesheets/autores.css">
-    <link rel="stylesheet" type="text/css" href="../public/stylesheets/barrapesquisa.css">
-</head>
-
 <body>
-
-    <header class="main">
-        <div class="containermenu">
-            <div class="logo">
-                <a href="/"><img class="logotipo" src="../public/images/Capturar-removebg-preview.png"
-                        alt="bookgear"></a>
-            </div>
-            <div class="search-box">
-                <input type="text" placeholder="Pesquisar">
-                <a href="#" class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                        fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                        <path
-                            d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-                    </svg></a>
-            </div>
-
-
-            <div class="user">
-                <a href="/Login">
-                    <button type="url" class="botao">Entrar</button></a>
-                <a class="login" href="/Cadastro">
-                    <button type="url" class="botao">Cadastrar</button></a>
-            </div>
-        </div>
-        <div class="cabecalho">
-            <nav>
-                <ul>
-                    <li><a class="home" href="/">HOME</a></li>
-                    <li><a class="caixas" href="#">CAIXAS</a></li>
-                    <li><a class="autores-cab" href="/user">AUTORES</a></li>
-                    <li><a class="editora" href="#">EDITOR</a></li>
-                    <li><a class="wishlist" href="/wishlist">WISHLIST</a></li>
-                    <li><a class="carrinho" href="/carrinho">CARRINHO</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-
     <main>
         <div class="responsive-container">
             <div class="autores">
@@ -76,7 +23,7 @@
                 <div class="grid-row">
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="../public/images/box.jpg" />
+                            <img src="../images/box.jpg" />
                         </div>
                         <div class="bottom">
                             <div class="product-content">
@@ -92,7 +39,7 @@
 
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="../public/images/box.jpg" />
+                            <img src="../images/box.jpg" />
                         </div>
                         <div class="bottom">
                             <div class="product-content">
@@ -108,7 +55,7 @@
 
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="../public/images/box.jpg" />
+                            <img src="../images/box.jpg" />
                         </div>
                         <div class="bottom">
                             <div class="product-content">
@@ -126,7 +73,7 @@
 
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="../public/images/box.jpg" />
+                            <img src="../images/box.jpg" />
                         </div>
                         <div class="bottom">
                             <div class="product-content">
@@ -143,7 +90,7 @@
                 <div class="grid-row">
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="../public/images/box.jpg" />
+                            <img src="../images/box.jpg" />
                         </div>
                         <div class="bottom">
                             <div class="product-content">
@@ -159,7 +106,7 @@
 
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="../public/images/box.jpg" />
+                            <img src="../images/box.jpg" />
                         </div>
                         <div class="bottom">
                             <div class="product-content">
@@ -175,7 +122,7 @@
 
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="../public/images/box.jpg" />
+                            <img src="../images/box.jpg" />
                         </div>
                         <div class="bottom">
                             <div class="product-content">
@@ -191,7 +138,7 @@
 
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="../public/images/box.jpg" />
+                            <img src="../images/box.jpg" />
                         </div>
                         <div class="bottom">
                             <div class="product-content">
@@ -208,7 +155,7 @@
                 <div class="grid-row">
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="../public/images/box.jpg" />
+                            <img src="../images/box.jpg" />
                         </div>
                         <div class="bottom">
                             <div class="product-content">
@@ -223,7 +170,7 @@
                     </a>
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="../public/images/box.jpg" />
+                            <img src="../images/box.jpg" />
                         </div>
                         <div class="bottom">
                             <div class="product-content">
@@ -238,7 +185,7 @@
                     </a>
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="../public/images/box.jpg" />
+                            <img src="../images/box.jpg" />
                         </div>
                         <div class="bottom">
                             <div class="product-content">
@@ -254,7 +201,7 @@
 
                     <a class="product" href="#">
                         <div class="product-image">
-                            <img src="../public/images/box.jpg" />
+                            <img src="../images/box.jpg" />
                         </div>
                         <div class="bottom">
                             <div class="product-content">
